Revert "Updated Player Object"
This reverts commit 26dfb6ee9add57b526fe9732218aa5ce2e3f0581.